# react-native-config-jsi

./: .yarnrc.yml  CONTRIBUTING.md  ConfigJsi.podspec  README.md  ReactNativeConfigJsi.podspec  lefthook.yml  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  dotenv.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/configjsi/: ConfigJsiModule.kt  ConfigJsiPackage.kt
example/: .env  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/configjsi/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ConfigJsiExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ConfigJsiExample.xcodeproj/: project.pbxproj
example/ios/ConfigJsiExample.xcodeproj/xcshareddata/xcschemes/: ConfigJsiExample.xcscheme
example/ios/ConfigJsiExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.js  App.tsx
ios/: ConfigJsi.h  ConfigJsi.mm  ReactNativeConfigJSI.h  ReactNativeConfigJSI.mm
scripts/: generate-xcconfig.sh
src/: NativeConfigJsi.ts  index.js  index.tsx
